media/css/firefox/ios.less
/* ... */
// Send to Device Widget
#send-to-device {
    display: none;
    border-radius: 6px;
    margin-top: 15px;

    .form-container {
        padding-top: 130px;
        background-position: center 25px;
        background-repeat: no-repeat;
        .at2x('/media/img/firefox/ios/send-to-device.png', 201px, 90px);
    }

    footer {
        border-radius: 0 0 6px 6px;
    }
}

#modal #send-to-device {
    display: block;
}

#modal .window .inner #modal-close {
    top: -30px;
}

.send-to-device {
    display: none;
}

// Hide app store button for locales that get the send-to-device widget
.js .show-widget {
    .dl-button,
    .appstore-badge {
        display: none;
    }
    .send-to-device,
    .send-to {
        display: inline;
    }
}

// Always show app store buttons for iOS users
.ios .show-widget {
    .dl-button,
    .appstore-badge {
        display: block;
    }
    .send-to-device,
    .send-to {
        display: none;
    }
}

.fxfamilynav-cta-wrapper .dl-button {
    text-align: center;
    margin-top: 6px;
}

.fxfamilynav-cta-wrapper .send-to {
    padding: 7px (@baseLine / 2);
    .font-size(@smallFontSize);
    color: #fff;
    text-align: center;
    margin-top: 10px;
}


// Sync instructions for iOS users
#sync-instructions {
    display: none;
    width: 220px;
    padding: 15px;
    background: #fff;
    border: 1px solid #ccc;
    border-radius: 6px;
    position: absolute;
    top: 10px;
    right: 5px;
    z-index: 101;
    box-shadow: 1px 2px 5px rgba(0, 0, 0, .2);
    color: @textColorPrimary;

    &:after,
    &:before {
        bottom: 100%;
        right: 10px;
        border: solid transparent;
        content: '';
        height: 0;
        width: 0;
        position: absolute;
        pointer-events: none;
    }

    &:after {
        border-color: rgba(255, 255, 255, 0);
        border-bottom-color: #fff;
        border-width: 10px;
        margin-left: -10px;
    }
    &:before {
        border-color: rgba(204, 204, 204, 0);
        border-bottom-color: #ccc;
        border-width: 11px;
        margin-left: -11px;
    }

    h4 {
        .font-size(18px);
        color: @textColorSecondary;
    }

    b {
        display: inline-block;
        text-indent: 120%;
        overflow: hidden;
        margin-bottom: -.15em;
        width: 14px;
        height: 14px;
        background: #fff;
        border: 1px solid @textColorSecondary;
        border-radius: 4px;
    }

    img {
        vertical-align: middle;
    }

    p:last-child {
        margin: 1em 0 0;
    }

    .btn-dismiss {
        background: transparent;
        border: 0;
        padding: 0;
        color: @linkBlue;
        font-size: inherit;
        font-family: inherit;
    }
}

#modal #sync-instructions {
    display: block;
}



// Footer
#colophon {
    background-color: @mozIDBlue;
    color: #fff;

    a:link,
    a:visited {
        color: #bee1f5;
    }

    a:hover,
    a:focus,
    a:active {
        color: #fff;
    }

    .logo a {
        background-repeat: no-repeat;
        .at2x('/media/img/sandstone/footer-mozilla-white.png', 93px, 24px);
    }
}

// For small high-res screens
@media only screen and (max-width: @breakTablet) and (-webkit-min-device-pixel-ratio: 1.5),
       only screen and (max-width: @breakTablet) and (min-resolution: 1.5dppx),
       only screen and (max-width: @breakTablet) and (min-resolution: 144dpi) {

    .section-intro .container {
        background-image: url(/media/img/firefox/ios/firefox-iphone-white-crop-high-res.png);
        .background-size(210px 290px);
    }
}

// Bug 1224103
html[lang=ja] {
    #privacy ul p {
        text-align: left;
    }
}

